# hypbit

./: .env.example  AGENTS.md  API_INVENTORY.md  Dockerfile  ENTERPRISE_AUDIT_REPORT.md  LAUNCH_PLAN.md  PERFORMANCE_REPORT.md  README.md  REDTEAM_REPORT.md  TODO_FOR_ERIK.md  dashboard.jsx  deploy.sh  docker-compose.yml  package-lock.json  package.json  tsconfig.json  verify.sh
.github-archive/: deploy-api.yml  deploy-command-center.yml  deploy-landvex-api.yml  deploy-scheduler.yml  deploy-wavult-app.yml  deploy-wavult-core.yml  infra-setup.yml
amos-identity-platform/: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
apps/quixzoom-connector/sdk/python/: README.md  pyproject.toml
docs/: INFRASTRUCTURE.md  INFRA_LIFECYCLE.md
scripts/: deploy-schema.cjs  deploy-to-supabase.js
server/: Dockerfile  package.json
sql/: 00_core.sql  11_auth_architecture.sql  13_iso_compliance.sql  14_permissions.sql  17_jurisdiction.sql  18_localization.sql  19_erp_integration.sql  20_asset_management.sql  21_deputies.sql  22_supplier_management.sql  23_calibration_import.sql  30_media_raw_archive.sql  38_treasury_schema.sql  39_payment_os_schema.sql  40_quixoom_core.sql  46_quixzoom_fees.sql  deploy_all.sql  qms-aviation-controls.sql
src/: asset-management.ts  audit-workspace.ts  calibration-import.ts  currency.ts  customer-quality.ts  deputies.ts  events.ts  execution.ts  index.ts  infrastructure-health.ts  jurisdiction-middleware.ts  legal-review.ts  org-admin.ts  permissions-admin.ts  personnel-escalation.ts  process.ts  (+10 more)
(+1175 files in other folders)
